Added missing padding to the modal popup

--- a/src/style.scss
+++ b/src/style.scss
@@ -52,6 +52,7 @@ body {
     overflow: auto;
     background-color: white;
     border: 3px solid $dark;
+    padding: 2rem;
     position: relative;
     
     .modal__title {
